# eqx-bot

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  tracing_logs.txt
scripts/: check_router.py  ingest.py  inspect_vector_db.py
src/: enrichment.py  generation.py  main.py  rag.py  retrieval.py  router.py  schemas.py  telemetry.py  tracing.py  ui.py
src/helpers/: helper.py
src/prompts/: advisor.yaml  analyst.yaml
